Fix case video background on iOS

--- a/src/components/case-pw.scss
+++ b/src/components/case-pw.scss
@@ -293,6 +293,7 @@ body {
       position: relative;
       border-radius: 8px;
       outline: none;
+      background: white;
     }
 
     p {
